Add readme.md and change some stles

--- a/memory/index.html
+++ b/memory/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>Placar: <span id="result"></span></h3>
+      <h1 id="result"></h1>
       <div class="grid"></div>
       <button type="button" id="restart">Start a new game.</button>
     </div>
