--- a/hangman/index.html
+++ b/hangman/index.html
@@ -11,23 +11,26 @@
 <body>
     <div class="container p-2">
         <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 order-1">
+            <div class="col-6 col-sm-3 order-1">
                 <img id="hangmanPicture" src="images/0.png" alt="hangman picture">
             </div>
-            <div class="col-12 col-sm-6 col-md-3 order-2 tip-picture">
-                <img id="imageTip" src="" alt="Tip picture">
+            <div class="col-6 col-sm-3 order-2 tip-picture">
+                <img id="imageTip" src="images/turtle.png" alt="Tip picture">
             </div>
-            <div class="col-12 col-md-5 order-4 order-md-3 tips-container">
-                <ul id="tips" class="tips-list"></ul>
+            <div class="col-12 col-sm-5 offset-sm-1 order-4 order-sm-3 mt-4 mt-sm-0 tips-container">
+                <ul id="tips" class="tips-list">
+                    <li>Podemos encontrá-la tanto na àgua quanto na terra</li>
+                    <li>Essa é a dica 2. Será a última dica escrita para o jogador</li>
+                </ul>
+            </div>
+            <div class="col-12 order-3 order-sm-4 letters-container">
+            </div>
+            <div class="col-12 order-5 restart-container d-flex">
                 <h2 id="result" class="result-text"></h2>
+                <button type="button" id="restart" class="restart-button">Start a new game.</button>
             </div>
-            <div class="col-12 order-3 order-md-4 letters-container">
+                <div class="col-12 order-6 alphabet-container">
             </div>
-            <div class="col-12 order-5 alphabet-container">
-            </div>
-        </div>
-        <div class="row restart-container">
-            <button type="button" id="restart" class="restart-button">Start a new game.</button>
         </div>
     </div>
     <script src="js/main.js"></script>
